tempfile/indoc/tests/ui/capture-var-nested.rs
use indoc::indoc;

fn main() {
    let world = "world";
    println!(indoc!("Hello {world}"));
}
